--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   
-  permission_handler: ^8.0.1
+  permission_handler:
 
 dev_dependencies:
   flutter_test:
